Fixed scrollbars into dialog selector

--- a/src/app/components/UI/selectors/service-catalog-selector/service-catalog-selector-component.scss
+++ b/src/app/components/UI/selectors/service-catalog-selector/service-catalog-selector-component.scss
@@ -1,31 +1,3 @@
-:host{
-    display: flex;
-    flex: 1;
-    flex-direction: column;
- }
-
-:host ::ng-deep .service-catalog-tree  .k-grid .k-grouping-row {
-    background-color: #22272b;
-}
-
-:host ::ng-deep .service-catalog-tree  .k-grouping-header  {
-    display: none;
-}
-
-:host ::ng-deep .service-catalog-tree .k-grid td {
-    border-bottom: 1px dotted #666;
-}
-
-:host ::ng-deep .service-catalog-tree .k-grid tr, .k-grid td {
-    padding: 0.5rem;
-}
-
-/*
-:host ::ng-deep .k-grid tr.k-state-selected, .k-grid td.k-state-selected {
-    color: inherit;
-    background-color: rgba(99, 111, 174, 0.25);
-}
-*/
 
 .channel-label,
 .badge {
